# spatial-capture-engine

./: CMakeLists.txt  README.md  requirements.txt
include/: spatial_detector.h
scripts/: test_automation.py
src/: main.cpp  spatial_detector.cpp
